colang-cli/tests/samples/good/array_type_syntax.co
fun main() {
  var x: [int] = [1, 2, 3];
  assert(x[0] == 1);
}
