colang-cli/tests/samples/compile_error/push_wrong_num_arguments.co
fun main() {
  var a = [1, 2, 3];
  a.push();
}
